fixed overflow

--- a/client/src/components/home/mainPage.css
+++ b/client/src/components/home/mainPage.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
-  height: 100%;
-  color:black;
+  height: 80%;
+  color: black;
   background-color: #ece6e1;
   color: black;
 }
